cheguei fim do inicio

--- a/menu.html
+++ b/menu.html
@@ -12,22 +12,22 @@
     </div>
     <div class="menue">
         <div class="d4">
-            <p>Dado de 4 lados</p>
+            <p><a href="D4.html">Dado de 4 lados</a></p>
         </div>
         <div class="d6">
-            <p>Dado de 6 lados</p>
+            <p><a href="D6.html">Dado de 6 lados</a></p>
         </div>
         <div class="d10">
-            <p>Dado de 10 lados</p>
+            <p><a href="D10.html">Dado de 10 lados</a></p>
         </div>
         <div class="d20">
-            <p>Dado de 20 lados</p>
+            <p><a href="D20.html">Dado de 20 lados</a></p>
         </div>
         <div class="d100">
-            <p class="textgrande">Dado de 100 lados</p>
+            <p class="textgrande"><a href="D100.html">Dado de 100 lados</a></p>
         </div>
         <div class="jogo">
-            <p class="textgrande">Tabuleiro</p>
+            <p class="textgrande"><a href="">Tabuleiro</a></p>
         </div>
     </div>
 
