--- a/D10.html
+++ b/D10.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="D10.css">
 </head>
 <body>
-    
+    <a href="menu.html">
+    <img class="seta" src="https://cdn-icons-png.flaticon.com/512/109/109617.png" alt="">
+    <script></script>
 </body>
 </html>
