--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
             <p class="textgrande"><a href="D100.html">Dado de 100 lados</a></p>
         </div>
         <div class="jogo">
-            <p class="textgrande"><a href="">Tabuleiro</a></p>
+            <p class="textgrande"><a href="tabuleiro.html">Tabuleiro</a></p>
         </div>
     </div>
 
