--- a/D4.html
+++ b/D4.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="D4.css">
 </head>
 <body>
+    <a href="menu.html">
+    <img class="seta" src="https://cdn-icons-png.flaticon.com/512/109/109617.png" alt="">
     <script></script>
 </body>
 </html>
