faz tempo que não comito

--- a/D6.html
+++ b/D6.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="D6.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dado de seis lados</title>
+<link rel="stylesheet" href="D6.css">
 </head>
 <body>
-    <a href="menu.html">
-    <img class="seta" src="https://cdn-icons-png.flaticon.com/512/109/109617.png" alt="">
-    <script></script>
+<div class="container">
+    <div class="dado">
+        <div class="face um">1</div>
+        <div class="face dois">2</div>
+        <div class="face tres">3</div>
+        <div class="face quatro">4</div>
+        <div class="face cinco">5</div>
+        <div class="face seis">6</div>
+    </div>
+    <button id="rolarDado">Rolar Dado</button>
+</div>
+<script src="D6.js"></script>
 </body>
 </html>
