--- a/D10.html
+++ b/D10.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dado de quatro lados</title>
-<link rel="stylesheet" href="D10.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dado de dez lados</title>
+    <link rel="stylesheet" href="D10.css">
 </head>
 <body>
-<div class="container">
-    <div class="dado">
-        <div class="face um">1</div>
-        <div class="face dois">2</div>
-        <div class="face tres">3</div>
-        <div class="face quatro">4</div>
-        <div class="face cinco">5</div>
-        <div class="face seis">6</div>
-        <div class="face sete">7</div>
-        <div class="face oito">8</div>
-        <div class="face nove">9</div>
-        <div class="face dez">10</div>
+    <div class="container">
+        <div class="dado">
+            <div class="face um">1</div>
+            <div class="face dois">2</div>
+            <div class="face tres">3</div>
+            <div class="face quatro">4</div>
+            <div class="face cinco">5</div>
+            <div class="face seis">6</div>
+            <div class="face sete">7</div>
+            <div class="face oito">8</div>
+            <div class="face nove">9</div>
+            <div class="face dez">10</div>
+        </div>
+        <button id="rolarDado">Rolar Dado</button>
     </div>
-    <button id="rolarDado">Rolar Dado</button>
-</div>
-<script src="D10.js"></script>
+    <script src="D10.js"></script>
 </body>
 </html>
