--- a/D20.html
+++ b/D20.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dado de vinte lados</title>
     <link rel="stylesheet" href="D20.css">
 </head>
 <body>
-    <a href="menu.html">
-    <img class="seta" src="https://cdn-icons-png.flaticon.com/512/109/109617.png" alt="">
-    <script></script>
+    <div class="container">
+        <div class="dado">
+            <div class="face um">1</div>
+            <div class="face dois">2</div>
+            <div class="face tres">3</div>
+            <div class="face quatro">4</div>
+            <div class="face cinco">5</div>
+            <div class="face seis">6</div>
+            <div class="face sete">7</div>
+            <div class="face oito">8</div>
+            <div class="face nove">9</div>
+            <div class="face dez">10</div>
+            <div class="face onze">11</div>
+            <div class="face doze">12</div>
+            <div class="face treze">13</div>
+            <div class="face quatroze">14</div>
+            <div class="face quinze">15</div>
+            <div class="face dezeseis">16</div>
+            <div class="face dezesete">17</div>
+            <div class="face dezoito">18</div>
+            <div class="face dezenove">19</div>
+            <div class="face vinte">20</div>
+        </div>
+        <button id="rolarDado">Rolar Dado</button>
+    </div>
+    <script src="D20.js"></script>
 </body>
 </html>
