--- a/D10.html
+++ b/D10.html
@@ -10,15 +10,16 @@
     <div class="container">
         <div class="dado">
             <div class="face um">1</div>
-            <div class="face dois">2</div>
+            <div class="face sete">2</div>
             <div class="face tres">3</div>
-            <div class="face quatro">4</div>
+            <div class="face seis">4</div>
             <div class="face cinco">5</div>
-            <div class="face seis">6</div>
-            <div class="face sete">7</div>
-            <div class="face oito">8</div>
-            <div class="face nove">9</div>
+            <div class="face oito">6</div>
+            <div class="face quatro">7</div>
+            <div class="face nove">8</div>
+            <div class="face dois">9</div>
             <div class="face dez">10</div>
+            <div class="buraco"></div>
         </div>
         <button id="rolarDado">Rolar Dado</button>
     </div>
