caramboles terminei a base do d20

--- a/D20.html
+++ b/D20.html
@@ -22,7 +22,7 @@
             <div class="face onze">11</div>
             <div class="face doze">12</div>
             <div class="face treze">13</div>
-            <div class="face quatroze">14</div>
+            <div class="face quatorze">14</div>
             <div class="face quinze">15</div>
             <div class="face dezeseis">16</div>
             <div class="face dezesete">17</div>
