--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
             <p><a href="D20.html">Dado de 20 lados</a></p>
         </div>
         <div class="d100">
-            <p class="textgrande"><a href="D100.html">Dado de 100 lados</a></p>
+            <p class="textgrande"><a href="calcu.html">Calculadora</a></p>
         </div>
         <div class="jogo">
             <p class="textgrande"><a href="tabuleiro.html">Tabuleiro</a></p>
