--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voodo é pra jacu</title>
+    <title>tabuleiro</title>
     <link rel="stylesheet" href="tabuleiro.css">
 </head>
 <body>
+    <div class="topo"></div>
+    <div class="dado"></div>
+    <div class="topo2"></div>
     <div class="inicio"></div>
     <div class="casa1"></div>
     <div class="casa2"></div>
