todas as casas prontas

--- a/tabuleiro.html
+++ b/tabuleiro.html
@@ -10,26 +10,58 @@
     <div class="topo"></div>
     <div class="dado"></div>
     <div class="topo2"></div>
-    <div class="inicio"></div>
-    <div class="casa1"></div>
-    <div class="casa2"></div>
-    <div class="casa3"></div>
-    <div class="casa4"></div>
-    <div class="casa5"></div>
-    <div class="casa6"></div>
-    <div class="casa7"></div>
-    <div class="casa8"></div>
-    <div class="casa9"></div>
-    <div class="casa10"></div>
-    <div class="casa11"></div>
-    <div class="casa12"></div>
-    <div class="casa13"></div>
-    <div class="casa14"></div>
-    <div class="casa15"></div>
-    <div class="casa16"></div>
-    <div class="casa17"></div>
-    <div class="casa18"></div>
-    <div class="casa19"></div>
-    <div class="casa20"></div>
+    <div class="inicio" id="0">inicio</div>
+    <div class="casa1" id="1"></div>
+    <div class="casa2" id="2"></div>
+    <div class="casa3" id="3"></div>
+    <div class="casa4" id="4"></div>
+    <div class="casa5" id="5"></div>
+    <div class="casa6" id="6"></div>
+    <div class="casa7" id="7"></div>
+    <div class="casa8" id="8"></div>
+    <div class="casa9" id="9"></div>
+    <div class="casa10" id="10"></div>
+    <div class="casa11" id="11"></div>
+    <div class="casa12" id="12"></div>
+    <div class="casa13" id="13"></div>
+    <div class="casa14" id="14"></div>
+    <div class="casa15" id="15"></div>
+    <div class="casa16" id="16"></div>
+    <div class="casa17" id="17"></div>
+    <div class="casa18" id="18"></div>
+    <div class="casa19" id="19"></div>
+    <div class="casa20" id="20"></div>
+    <div class="casa21" id="21"></div>
+    <div class="casa22" id="22"></div>
+    <div class="casa23" id="23"></div>
+    <div class="casa24" id="24"></div>
+    <div class="casa25" id="25"></div>
+    <div class="casa26" id="26"></div>
+    <div class="casa27" id="27"></div>
+    <div class="casa28" id="28"></div>
+    <div class="casa29" id="29"></div>
+    <div class="casa30" id="30"></div>
+    <div class="casa31" id="31"></div>
+    <div class="casa32" id="32"></div>
+    <div class="casa33" id="33"></div>
+    <div class="casa34" id="34"></div>
+    <div class="casa35" id="35"></div>
+    <div class="casa36" id="36"></div>
+    <div class="casa37" id="37"></div>
+    <div class="casa38" id="38"></div>
+    <div class="casa39" id="39"></div>
+    <div class="casa40" id="40"></div>
+    <div class="casa41" id="41"></div>
+    <div class="casa42" id="42"></div>
+    <div class="casa43" id="43"></div>
+    <div class="casa44" id="44"></div>
+    <div class="casa45" id="45"></div>
+    <div class="casa46" id="46"></div>
+    <div class="casa47" id="47"></div>
+    <div class="casa48" id="48"></div>
+    <div class="casa49" id="49"></div>
+    <div class="casa50" id="50"></div>
+    <div class="casa51" id="51">fim</div>
+
 </body>
 </html>
