--- a/D10.html
+++ b/D10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dado de dez lados</title>
+    <title>Dado de dez faces</title>
     <link rel="stylesheet" href="D10.css">
 </head>
 <body>
