--- a/D6.html
+++ b/D6.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dado de seis lados</title>
+<title>Dado de seis faces</title>
 <link rel="stylesheet" href="D6.css">
 </head>
 <body>
