--- a/menu.html
+++ b/menu.html
@@ -12,16 +12,16 @@
     </div>
     <div class="menue">
         <div class="d4">
-            <p><a href="D4.html">Dado de 4 lados</a></p>
+            <p><a href="D4.html">Dado de 4 faces</a></p>
         </div>
         <div class="d6">
-            <p><a href="D6.html">Dado de 6 lados</a></p>
+            <p><a href="D6.html">Dado de 6 faces</a></p>
         </div>
         <div class="d10">
-            <p><a href="D10.html">Dado de 10 lados</a></p>
+            <p><a href="D10.html">Dado de 10 faces</a></p>
         </div>
         <div class="d20">
-            <p><a href="D20.html">Dado de 20 lados</a></p>
+            <p><a href="D20.html">Dado de 20 faces</a></p>
         </div>
         <div class="d100">
             <p class="textgrande"><a href="calcu.html">Calculadora</a></p>
