--- a/D20.html
+++ b/D20.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dado de vinte lados</title>
+    <title>Dado de vinte faces</title>
     <link rel="stylesheet" href="D20.css">
 </head>
 <body>
