--- a/D4.html
+++ b/D4.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dado de quatro lados</title>
+<title>Dado de quatro faces</title>
 <link rel="stylesheet" href="D4.css">
 </head>
 <body>
